refactoring from java 8 to java 20.